Add cocoa pods necessary for using an API and add refresh animation to tableviews
I added the AFNetworking and BDBOAuth1Manager pods to my podfile. I also added a refresh animation to my tableviews which doesn't do anything yet because my tableviews are not yet pulling data from an API.

--- a/NikoBracket/Base.lproj/Main.storyboard
+++ b/NikoBracket/Base.lproj/Main.storyboard
@@ -379,6 +379,7 @@
                     </navigationItem>
                     <connections>
                         <outlet property="homeTableView" destination="1RL-2k-K8L" id="vzR-Bf-hav"/>
+                        <outlet property="logOutButton" destination="CzP-9O-E0n" id="dW4-C6-OEk"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fZj-8d-pEW" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
