--- a/NikoBracket/Base.lproj/Main.storyboard
+++ b/NikoBracket/Base.lproj/Main.storyboard
@@ -302,7 +302,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="uuQ-b5-KQ8">
-                                <rect key="frame" x="0.0" y="88" width="414" height="725"/>
+                                <rect key="frame" x="0.0" y="88" width="414" height="808"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
@@ -317,8 +317,8 @@
                                                     <rect key="frame" x="20" y="104" width="374" height="32"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <segments>
-                                                        <segment title="Away"/>
-                                                        <segment title="Home"/>
+                                                        <segment title=""/>
+                                                        <segment title=""/>
                                                     </segments>
                                                     <connections>
                                                         <action selector="teamSelectAction:" destination="b1l-Er-aVB" eventType="valueChanged" id="rwx-Tf-uRI"/>
@@ -374,6 +374,15 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="x8B-zt-ojk">
+                                <rect key="frame" x="0.0" y="329" width="414" height="46"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="filled" title="Lock Bracket"/>
+                                <connections>
+                                    <action selector="didTapLockBracket:" destination="yLW-Xc-dMQ" eventType="touchUpInside" id="Hq1-5T-7GB"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="TQZ-cd-fcF"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -398,6 +407,7 @@
                     </navigationItem>
                     <connections>
                         <outlet property="createBracketTableView" destination="uuQ-b5-KQ8" id="zYT-f7-Eiv"/>
+                        <outlet property="lockBracket" destination="x8B-zt-ojk" id="whg-Yd-TCZ"/>
                         <outlet property="roundControl" destination="MjZ-AA-vO4" id="adE-ny-9hm"/>
                     </connections>
                 </viewController>
